<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add_icon" />

        <EditText
            android:id="@+id/etx_name"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_height="wrap_content"
            android:background="@drawable/etx_shape"
            android:padding="10dp"
            android:textColor="@color/white"
            android:inputType="text"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/etx_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/etx_shape"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="7dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etx_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/etx_shape"
            android:padding="10dp"
            android:textColor="@color/white"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:hint="@string/mobile" />

        <EditText
            android:id="@+id/etx_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/etx_shape"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="7dp"
            android:inputType="text"
            android:hint="@string/address" />

        <TextView
            android:id="@+id/save_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/btn_back"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>